--- a/code/shot_predictor.ipynb
+++ b/code/shot_predictor.ipynb
@@ -6,7 +6,9 @@
    "id": "b46478f4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Neural Network code"
+   ]
   }
  ],
  "metadata": {
