--- a/code/nba_api.ipynb
+++ b/code/nba_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e387bfca",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
        "15    40   270  310  421   80   30  200   95  1718  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "ab6f343a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "0475abff",
    "metadata": {},
    "outputs": [
@@ -1055,20 +1063,22 @@
        "[1258 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from nba_api.stats.endpoints import shotchartdetail\n",
-    "shots = shotchartdetail.ShotChartDetail(\n",
-    "    team_id=0,\n",
-    "    player_id=201939,  # Steph Curry\n",
-    "    season_type_all_star='Regular Season',\n",
-    "    context_measure_simple='FGA'\n",
-    ").get_data_frames()[0]\n",
-    "shots\n"
+    "def find_player(player_id):\n",
+    "    shots = shotchartdetail.ShotChartDetail(\n",
+    "        team_id=0,\n",
+    "        player_id=player_id ,  # Steph Curry\n",
+    "        season_type_all_star='Regular Season',\n",
+    "        context_measure_simple='FGA'\n",
+    "    ).get_data_frames()[0]\n",
+    "    return shots\n",
+    "find_player(201939)"
    ]
   },
   {
@@ -1081,10 +1091,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "df3b5228",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'shots' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m curry \u001b[38;5;241m=\u001b[39m \u001b[43mshots\u001b[49m\u001b[38;5;241m.\u001b[39mdrop(columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGRID_TYPE\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGAME_ID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGAME_EVENT_ID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPLAYER_ID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTEAM_ID\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTEAM_NAME\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPLAYER_NAME\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEVENT_TYPE\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGAME_DATE\u001b[39m\u001b[38;5;124m'\u001b[39m,\t\n\u001b[0;32m      2\u001b[0m                             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHTM\u001b[39m\u001b[38;5;124m'\u001b[39m,\t\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVTM\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m curry \u001b[38;5;241m=\u001b[39m curry\u001b[38;5;241m.\u001b[39mdropna()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'shots' is not defined"
+     ]
+    }
+   ],
    "source": [
     "curry = shots.drop(columns=['GRID_TYPE', 'GAME_ID', 'GAME_EVENT_ID', 'PLAYER_ID', 'TEAM_ID', 'TEAM_NAME', 'PLAYER_NAME', 'EVENT_TYPE', 'GAME_DATE',\t\n",
     "                            'HTM',\t'VTM'])\n",
@@ -1093,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "06527cb5",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3f945bad",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b8781889",
    "metadata": {},
    "outputs": [
@@ -1199,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3c6c810a",
    "metadata": {},
    "outputs": [
@@ -1228,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "68ae6845",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bf65aef6",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1311,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
