--- a/code/shot_predictor.ipynb
+++ b/code/shot_predictor.ipynb
@@ -9,6 +9,35 @@
    "source": [
     "# Neural Network code"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abd60461",
+   "metadata": {},
+   "source": [
+    "### Data cleaning and preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "342129ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import pandas as pd\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d4a937f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
